# sage-chat

./: README.md  pyproject.toml
guru_ai/: ai.py  app.py  chat.py  cli_commands.py
guru_ai/model/: sage.py  user.py  user_sage_info.py
guru_ai/routes/: auth_routes.py  chat_routes.py  index.py
sage_chat/: ai.py  app.py  chat.py  cli_commands.py
sage_chat/model/: sage.py  user.py  user_sage_info.py
sage_chat/routes/: auth_routes.py  chat_routes.py  index.py
static/: sages.json  script.js  style.css
template/: index.html  login.html  signup.html
